--- a/gradoop-giraph/pom.xml
+++ b/gradoop-giraph/pom.xml
@@ -34,7 +34,23 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <systemProperties>
+                        <!-- Needed for unit testing -->
+                        <property>
+                            <name>prop.jarLocation</name>
+                            <value>
+                                ${top.dir}/gradoop-core/target/gradoop-core-${project.version}-jar-with-dependencies.jar
+                            </value>
+                        </property>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+            <plugin>
+            <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
         </plugins>
@@ -44,12 +60,42 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>${dep.hadoop-core.version}</version>
+            <version>${dep.hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.giraph</groupId>
             <artifactId>giraph-core</artifactId>
-            <version>${dep.giraph-core.version}</version>
+            <version>${dep.giraph.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.giraph</groupId>
+            <artifactId>giraph-hbase</artifactId>
+            <version>${dep.giraph.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${dep.hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>${dep.hbase.version}</version>
+        </dependency>
+
+        <!-- Testing -->
+        <!--<dependency>-->
+        <!--<groupId>de.uni-leipzig.de.dbs</groupId>-->
+        <!--<artifactId>gradoop-core</artifactId>-->
+        <!--<version>${project.version}</version>-->
+        <!--<classifier>tests</classifier>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-testing-util</artifactId>
+            <version>${dep.hbase.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
