--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,6 @@
         <project.build.targetJdk>1.7</project.build.targetJdk>
 
         <dep.log4j.version>1.2.17</dep.log4j.version>
-        <dep.neo4j.version>2.1.5</dep.neo4j.version>
         <dep.hbase.version>0.98.7-hadoop1</dep.hbase.version>
         <dep.hadoop.version>1.2.1</dep.hadoop.version>
         <dep.giraph.version>1.1.0-SNAPSHOT</dep.giraph.version>
@@ -56,29 +55,29 @@
                     <target>${project.build.targetJdk}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.10</version>
-                <configuration>
-                    <configLocation>${top.dir}/checkstyle.xml</configLocation>
-                    <consoleOutput>true</consoleOutput>
-                    <enableRulesSummary>false</enableRulesSummary>
-                    <headerLocation>${top.dir}/license-header.txt
-                    </headerLocation>
-                    <failOnViolation>true</failOnViolation>
-                    <includeTestSourceDirectory>false
-                    </includeTestSourceDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
+                <!--<version>2.10</version>-->
+                <!--<configuration>-->
+                    <!--<configLocation>${top.dir}/checkstyle.xml</configLocation>-->
+                    <!--<consoleOutput>true</consoleOutput>-->
+                    <!--<enableRulesSummary>false</enableRulesSummary>-->
+                    <!--<headerLocation>${top.dir}/license-header.txt-->
+                    <!--</headerLocation>-->
+                    <!--<failOnViolation>true</failOnViolation>-->
+                    <!--<includeTestSourceDirectory>false-->
+                    <!--</includeTestSourceDirectory>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>verify</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>check</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
