--- a/gradoop-checkstyle/pom.xml
+++ b/gradoop-checkstyle/pom.xml
@@ -26,6 +26,13 @@
                     <skipAssembly>true</skipAssembly>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
