created module gradoop-biiig and moved algorithms
* moved BTGComputation
* moved AggregateComputation

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>gradoop-core</module>
         <module>gradoop-giraph</module>
+        <module>gradoop-biiig</module>
         <module>gradoop-checkstyle</module>
     </modules>
 
