added Aggregation Unit Test
* tests reading EPG from HBase, MR processing and writing result back to HBase

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>gradoop-giraph</module>
         <module>gradoop-biiig</module>
         <module>gradoop-checkstyle</module>
+        <module>gradoop-mapreduce</module>
     </modules>
 
     <developers>
