--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <dep.log4j.version>1.2.17</dep.log4j.version>
         <dep.hbase.version>0.98.7-hadoop1</dep.hbase.version>
         <dep.hadoop.version>1.2.1</dep.hadoop.version>
-        <dep.giraph.version>1.1.0-SNAPSHOT</dep.giraph.version>
+        <dep.giraph.version>1.1.0</dep.giraph.version>
         <dep.junit.version>4.11</dep.junit.version>
 
         <plugin.maven-compiler.version>3.0</plugin.maven-compiler.version>
