updated dependencies to hadoop-2.2.0
* zookeeper connection exception on minicluster shutdown

--- a/gradoop-giraph/pom.xml
+++ b/gradoop-giraph/pom.xml
@@ -70,7 +70,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
+            <artifactId>hadoop-client</artifactId>
             <version>${dep.hadoop.version}</version>
         </dependency>
         <dependency>
