--- a/gradoop-mapreduce/pom.xml
+++ b/gradoop-mapreduce/pom.xml
@@ -70,7 +70,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
+            <artifactId>hadoop-client</artifactId>
             <version>${dep.hadoop.version}</version>
         </dependency>
         <dependency>
