--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
         <project.build.targetJdk>1.7</project.build.targetJdk>
 
         <dep.log4j.version>1.2.17</dep.log4j.version>
-        <dep.hbase.version>0.98.7-hadoop1</dep.hbase.version>
-        <dep.hadoop.version>1.2.1</dep.hadoop.version>
-        <dep.giraph.version>1.1.0</dep.giraph.version>
+        <dep.hbase.version>0.98.7-hadoop2</dep.hbase.version>
+        <dep.hadoop.version>2.2.0</dep.hadoop.version>
+        <dep.giraph.version>1.1.0-hadoop2</dep.giraph.version>
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
 
